# cop-sim-demo

./: .gitignore  CMakeLists.txt  README.md
01-single-contact/: CMakeLists.txt  main.cpp  object.urdf  sphere_object.urdf  world.urdf
02-two-capsules/: CMakeLists.txt  capsule_object.urdf  collisionDetectionDemo.cpp  main.cpp  world.urdf  worldCollDetect.urdf
03-one-cylinder/: CMakeLists.txt  cylinder_object.urdf  main.cpp  world.urdf
04-two-arm-rolling/: CMakeLists.txt  main.cpp  roller_object.urdf  world.urdf
05-one-box/: CMakeLists.txt  box_object.urdf  main.cpp  world.urdf
06-one-pyramid/: CMakeLists.txt  main.cpp  pyramid_object.urdf  world.urdf
07-sphere-curved/: CMakeLists.txt  main.cpp  plane_tilting.urdf  plotPenetratation.py  sphere_object.urdf  world.urdf
08-negative_space_peg_hole/: CMakeLists.txt  capsule_object.urdf  main.cpp  right_half.mtl  world.urdf
09-neg_space_arm_insertion/: CMakeLists.txt  main.cpp  three_hole_block.mtl  world.urdf
10-redundant-surface-contacts/: CMakeLists.txt  box_object.urdf  main.cpp  world.urdf
resources/kuka_iiwa/: hand.mtl  kuka_iiwa.urdf  kuka_iiwa_peg_hole1.urdf
scripts/: plotNonPenetrationMomentLineContactSlip.py  testPointSetBoundaryAlongRay.py  testPointSetClosestPointExterior.py  testRotationFrictionDistanceModel.py  visualizeLocalCurvature.py
src/: EventLogger.h
src/cop_simulator/: ArticulatedRigidBody.cpp  ArticulatedRigidBody.h  ArticulatedRigidBodyManager.cpp  ArticulatedRigidBodyManager.h  COPSimulator.cpp  COPSimulator.h  COPSolver.h  COPSolverComplete0.cpp  COPSolverExtended.cpp  COPSolverExtended.h  CollisionResolution.cpp  ContactCurvature.cpp  ContactDetection.cpp  ContactSpaceModel.cpp  ContactSpaceModel.h  GeometryManager.h  PointContactsSteadyContactResolution.cpp  SteadyContactResolution.cpp  WorldContactMap.cpp  WorldContactMap.h
src/cop_simulator/geometry/: Composite1PkN.cpp  Composite1PkN.h  ContactPatch.cpp  ContactPatch.h  GeometryUtils.cpp  GeometryUtils.h  IntersectionEdge.cpp  IntersectionEdge.h  IntersectionEdgeFactory.cpp  IntersectionEdgePrimDistance.cpp  NegPrimPrimDistance.cpp  PointPrimDistance.cpp  PointPrimDistance.h  PrimNormal.cpp  PrimNormal.h  PrimPrimContactInfo.cpp  PrimPrimContactInfo.h  PrimPrimDistance.cpp  PrimPrimDistance.h  Primitive.cpp  Primitive.h
src/cop_simulator_tests/: CMakeLists.txt  COPGeometryTest.cpp  COPSolverTest.cpp
src/lcp_solvers/: CMakeLists.txt  LCPSolver.cpp  LCPSolver.h  LCPSolver2.cpp  LCPSolver2.h  LCPSolverInternal.cpp  LCPSolverInternal.h  LCPSolverTest.cpp
src/logger/: Logger.h
utils/: printTODOs.sh  visualize.py
